src/stylesheets/components/_esper.scss
// sass-lint:disable no-color-literals

//
// Esper
// --------------------------------------------------

.esper {
  flex: 1 1 0;
  background: $esper-bg;
  display: flex;
  flex-direction: column;
  position: relative;
  overflow: hidden;

  &:not(:focus) {
    .toolbar-left {
      opacity: 0.6;
    }
  }

  .esper-header {
    position: relative;
    z-index: $zindex-esper-header;
  }

  .toolbar {
    box-sizing: content-box;
    padding-top: 0;
    height: $toolbar-height;
    margin: 0;
    box-shadow: 0 1px 0 $esper-toolbar-shadow;
    background: $esper-toolbar-solid-bg;

    .frameless & {
      background: transparent;
    }

    .btn-icon {
      & + .btn-icon {
        margin-left: $space-min / 2;
      }
    }

    .tool-group {
      > .btn-icon {
        &.active {
          background: $esper-btn-active-bg;

          .icon {
             color: $esper-btn-active-color;
          }

        }
      }

      & + .tool-group {
        margin-left: $space-lg;
      }
    }

    .slider {
      margin-top: 0;
      height: $toolbar-height;
    }

    .slider-handle {
      background-color: $esper-slider-handle-bg;
    }

    .slider-value {
      color: $esper-slider-value-color;
    }
  }

  .esper-view {
    flex: 1 1 0;
    position: relative;

    canvas {
      position: absolute;
    }
  }

  &.overlay-toolbar {
    .esper-header {
      position: absolute;
      left: 0;
      top: 0;
      width: 100%;

      &.window-draggable {
        position: absolute;
      }
    }

    .toolbar {
      background: $esper-toolbar-overlay-bg;
      box-shadow: none;
      transform: translate3d(0, -100%, 0);
      transition: transform $esper-toolbar-transition-out;

      @at-root #{selector-replace(&, ".esper", ".esper:hover")} {
        transform: translate3d(0, 0, 0);
        transition: transform $esper-toolbar-transition-in-hover;
      }

      @at-root #{selector-replace(&, ".esper", ".esper:focus")} {
        transform: translate3d(0, 0, 0);
        transition: transform $esper-toolbar-transition-in-focus;
      }

      .btn-icon {
        .icon {
          color: $esper-toolbar-overlay-icon-color;
        }

        &:active {
          .icon {
            color: $icon-active-color;
          }

          &[disabled] {
            .icon {
              color: $esper-toolbar-overlay-icon-color;
            }
          }
        }
      }

      .tool-group {
        > .btn-icon {
          &.active {
            background: $esper-toolbar-overlay-btn-active-bg;

            .icon {
              color: $esper-toolbar-overlay-btn-active-color;
            }
          }
        }

        & + .tool-group {
          margin-left: $space-lg;
        }
      }

      .slider-track {
        background: $esper-toolbar-overlay-slider-track-bg;
      }

      .slider-range {
        background: $esper-toolbar-overlay-slider-range-bg;
      }

      .slider-handle {
        background-color: $esper-toolbar-overlay-slider-handle-bg;
        border-color: $esper-toolbar-overlay-slider-handle-border;
      }

      .slider-value {
        color: $esper-toolbar-overlay-slider-value-color;
      }
    }
  }

  @each $key, $val in $esper-cursor {
    &.#{$key} {
      .esper-view {
        cursor: -webkit-image-set(
          image-url("esper/#{map-get($val, 'default')}@1x.svg") 1x,
          image-url("esper/#{map-get($val, 'default')}@2x.svg") 2x
        ) map-get($val, "x") map-get($val, "y"), default;
      }
    }
  }
}

